--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,7 +73,7 @@ img{
 .food-pic{
 	float: left;
 	width: 30%;
-	height: 300px;
+
 }
 /*.food-description{
 	float: right;
@@ -110,3 +110,18 @@ p{
     font-size: 15px;
     border-radius: 10px;
 }
+/*#c{
+	float: left;
+	width: 30%;
+	padding-top: 50px;
+}
+#pic{
+	width: 100%;
+}*/
+
+
+
+
+
+
+
